slv all css link and img link

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -11,8 +11,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/Css/AboutUs.css" />
-    <link rel="stylesheet" href="/Css/index.css" />
+    <link rel="stylesheet" href="./Css/AboutUs.css" />
+    <link rel="stylesheet" href="./Css/index.css" />
   </head>
   <body>
     <div class="container header-section">
@@ -20,7 +20,7 @@
         <ul>
           <li>
             <h2 class="main-logo">
-              <a href="index.html">Shop Hu<samp>B</samp></a>
+              <a href="./index.html">Shop Hu<samp>B</samp></a>
             </h2>
           </li>
         </ul>
@@ -112,10 +112,10 @@
         <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./Categoris.html">Categories</a></li>
+            <li><a href="./AboutUs.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-contact">
