--- a/Categoris.html
+++ b/Categoris.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/Css/Categories.css" />
-    <link rel="stylesheet" href="/Css/index.css" />
+    <link rel="stylesheet" href="./Css/Categories.css" />
+    <link rel="stylesheet" href="./Css/index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -21,7 +21,7 @@
         <ul>
           <li>
             <h2 class="main-logo">
-              <a href="index.html">Shop Hu<samp>B</samp></a>
+              <a href="./index.html">Shop Hu<samp>B</samp></a>
             </h2>
           </li>
         </ul>
@@ -52,7 +52,7 @@
       <div class="Shop-by-Categories-titel-grid">
         <div class="Electronic">
           <figure>
-            <img src="/Image/Electronics.png" alt="Electronics" />
+            <img src="./Image/Electronics.png" alt="Electronics" />
           </figure>
           <div class="content-conteiner">
             <h3>Electronics</h3>
@@ -61,7 +61,7 @@
         </div>
         <div class="Fashion">
           <figure>
-            <img src="/Image/Fashion.png" alt="Fashion" />
+            <img src="./Image/Fashion.png" alt="Fashion" />
           </figure>
           <div class="content-conteiner">
             <h3>Fashion</h3>
@@ -70,7 +70,7 @@
         </div>
         <div class="Home & Kitchen">
           <figure>
-            <img src="/Image/Kitchen.png" alt="Kitchen" />
+            <img src="./Image/Kitchen.png" alt="Kitchen" />
           </figure>
           <div class="content-conteiner">
             <h3>Home & Kitchen</h3>
@@ -79,7 +79,7 @@
         </div>
         <div class="Beauty">
           <figure>
-            <img src="/Image/Beauty.png" alt="Beauty" />
+            <img src="./Image/Beauty.png" alt="Beauty" />
           </figure>
           <div class="content-conteiner">
             <h3>Beauty</h3>
@@ -88,7 +88,7 @@
         </div>
         <div class="Mens-Black-Cap">
           <figure>
-            <img src="/Image/Cap.png" alt="Cap" />
+            <img src="./Image/Cap.png" alt="Cap" />
           </figure>
           <div class="content-conteiner">
             <h3>Mens Black Cap</h3>
@@ -97,7 +97,7 @@
         </div>
         <div class="Technic-Makeup-Spray">
           <figure>
-            <img src="/Image/Technic.png" alt="" />
+            <img src="./Image/Technic.png" alt="" />
           </figure>
           <div class="content-conteiner">
             <h3>Technic Makeup Spray</h3>
@@ -106,7 +106,7 @@
         </div>
         <div class="Detergent-Powder">
           <figure>
-            <img src="/Image/Detergent.png" alt="Detergent" />
+            <img src="./Image/Detergent.png" alt="Detergent" />
           </figure>
           <div class="content-conteiner">
             <h3>Detergent Powder</h3>
@@ -115,7 +115,7 @@
         </div>
         <div class="sparkling-water">
           <figure>
-            <img src="/Image/sparklingr.png" alt="sparklingr" />
+            <img src="./Image/sparklingr.png" alt="sparklingr" />
           </figure>
           <div class="content-conteiner">
             <h3>sparkling-water</h3>
@@ -152,10 +152,10 @@
         <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./Categoris.html">Categories</a></li>
+            <li><a href="./AboutUs.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-contact">
