--- a/Customers.html
+++ b/Customers.html
@@ -12,8 +12,8 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="/Css/Customers.css" />
-    <link rel="stylesheet" href="/Css/index.css" />
+    <link rel="stylesheet" href="./Css/Customers.css" />
+    <link rel="stylesheet" href="./Css/index.css" />
   </head>
   <body>
     <div class="container header-section">
@@ -21,7 +21,7 @@
         <ul>
           <li>
             <h2 class="main-logo">
-              <a href="index.html">Shop Hu<samp>B</samp></a>
+              <a href="./index.html">Shop Hu<samp>B</samp></a>
             </h2>
           </li>
         </ul>
@@ -48,22 +48,22 @@
       <div class="testimonial grid-two-cols">
         <div class="numberOner">
           <figure>
-            <img src="/Image/0 (1).png" alt="" />
+            <img src="./Image/0 (1).png" alt="" />
           </figure>
         </div>
         <div class="number2">
           <figure>
-            <img src="/Image/0 (2).png" alt="" />
+            <img src="./Image/0 (2).png" alt="" />
           </figure>
         </div>
         <div class="number3">
           <figure>
-            <img src="/Image/0 (3).png" alt="" />
+            <img src="./Image/0 (3).png" alt="" />
           </figure>
         </div>
         <div class="number4">
           <figure>
-            <img src="/Image/0 (4).png" alt="" />
+            <img src="./Image/0 (4).png" alt="" />
           </figure>
         </div>
       </div>
@@ -95,10 +95,10 @@
         <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./Categoris.html">Categories</a></li>
+            <li><a href="./AboutUs.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-contact">
