--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/Css/contact.css" />
-    <link rel="stylesheet" href="/Css/index.css" />
+    <link rel="stylesheet" href="./Css/contact.css" />
+    <link rel="stylesheet" href="./Css/index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -20,7 +20,7 @@
         <ul>
           <li>
             <h2 class="main-logo">
-              <a href="index.html">Shop Hu<samp>B</samp></a>
+              <a href="./index.html">Shop Hu<samp>B</samp></a>
             </h2>
           </li>
         </ul>
@@ -116,10 +116,10 @@
         <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./Categoris.html">Categories</a></li>
+            <li><a href="./AboutUs.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-contact">
