--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <div class="contact-number">
           <ul class="contact-with-phone-Email">
             <li>
-              <a href="/index.html"
+              <a href="./index.html"
                 ><i class="fa-solid fa-phone"></i> 01992284845</a
               >
             </li>
             <li>
-              <a href="/index.html"
+              <a href="./index.html"
                 ><i class="fa-solid fa-envelope"></i>
                 mdrashed462478@gmail.com</a
               >
@@ -63,7 +63,7 @@
           <ul>
             <li>
               <h2 class="main-logo">
-                <a href="/index.html">Shop Hu<samp>B</samp></a>
+                <a href="./index.html">Shop Hu<samp>B</samp></a>
               </h2>
             </li>
           </ul>
@@ -91,18 +91,20 @@
       <!-- ? start navbar section -->
       <div class="nav-section">
         <ul>
-          <li class="nav-var-section"><a href="/index.html">Home</a></li>
+          <li class="nav-var-section"><a href="./index.html">Home</a></li>
           <li class="nav-var-section">
-            <a href="/Shop.html">Shop</a>
+            <a href="./Shop.html">Shop</a>
           </li>
           <li class="nav-var-section">
-            <a href="/Categoris.html">Categoris</a>
+            <a href="./Categoris.html">Categoris</a>
           </li>
           <li class="nav-var-section">
-            <a href="/Customers.html">Our Customers</a>
+            <a href="./Customers.html">Our Customers</a>
           </li>
-          <li class="nav-var-section"><a href="AboutUs.html">About Us</a></li>
-          <li class="nav-var-section"><a href="contact.html">Contuct Us</a></li>
+          <li class="nav-var-section"><a href="./AboutUs.html">About Us</a></li>
+          <li class="nav-var-section">
+            <a href="./contact.html">Contuct Us</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -118,7 +120,7 @@
 
         <button class="animated-btn shope-new magnifying">shope new</button>
         <button class="animated-btn Contact Us shope-new magnifying">
-          <a href="/contact.html">Contact Us</a>
+          <a href="./contact.html">Contact Us</a>
         </button>
       </div>
     </div>
@@ -141,7 +143,7 @@
         </div>
         <div class="Fashion">
           <figure>
-            <img src="/Image/Fashion.png" alt="Fashion" />
+            <img src="./Image/hero.jpg" alt="Fashion" />
           </figure>
           <div class="content-conteiner">
             <h3>Fashion</h3>
@@ -150,7 +152,7 @@
         </div>
         <div class="Home & Kitchen">
           <figure>
-            <img src="/Image/Kitchen.png" alt="Kitchen" />
+            <img src="./Image/Kitchen.png" alt="Kitchen" />
           </figure>
           <div class="content-conteiner">
             <h3>Home & Kitchen</h3>
@@ -159,7 +161,7 @@
         </div>
         <div class="Beauty">
           <figure>
-            <img src="/Image/Beauty.png" alt="Beauty" />
+            <img src="./Image/Beauty.png" alt="Beauty" />
           </figure>
           <div class="content-conteiner">
             <h3>Beauty</h3>
@@ -168,7 +170,7 @@
         </div>
         <div class="Mens-Black-Cap">
           <figure>
-            <img src="/Image/Cap.png" alt="Cap" />
+            <img src="./Image/Cap.png" alt="Cap" />
           </figure>
           <div class="content-conteiner">
             <h3>Mens Black Cap</h3>
@@ -177,7 +179,7 @@
         </div>
         <div class="Technic-Makeup-Spray">
           <figure>
-            <img src="/Image/Technic.png" alt="" />
+            <img src="./Image/Technic.png" alt="" />
           </figure>
           <div class="content-conteiner">
             <h3>Technic Makeup Spray</h3>
@@ -186,7 +188,7 @@
         </div>
         <div class="Detergent-Powder">
           <figure>
-            <img src="/Image/Detergent.png" alt="Detergent" />
+            <img src="./Image/Detergent.png" alt="Detergent" />
           </figure>
           <div class="content-conteiner">
             <h3>Detergent Powder</h3>
@@ -195,7 +197,7 @@
         </div>
         <div class="sparkling-water">
           <figure>
-            <img src="/Image/sparklingr.png" alt="sparklingr" />
+            <img src="./Image/sparklingr.png" alt="sparklingr" />
           </figure>
           <div class="content-conteiner">
             <h3>sparkling-water</h3>
@@ -216,7 +218,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/1.png" alt="" />
+                <img src="./Image/1.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -259,7 +261,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/2.png" alt="" />
+                <img src="./Image/2.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -302,7 +304,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/3.png" alt="" />
+                <img src="./Image/3.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -344,7 +346,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/4.png" alt="" />
+                <img src="./Image/4.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -387,7 +389,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/6.png" alt="" />
+                <img src="./Image/6.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -429,7 +431,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/7.png" alt="" />
+                <img src="./Image/7.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -471,7 +473,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/8.png" alt="" />
+                <img src="./Image/8.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -513,7 +515,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/10.png" alt="" />
+                <img src="./Image/10.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -556,7 +558,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/9.png" alt="" />
+                <img src="./Image/9.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -619,22 +621,22 @@
       <div class="testimonial grid-two-cols">
         <div class="numberOner">
           <figure>
-            <img src="/Image/0 (1).png" alt="" />
+            <img src="./Image/0 (1).png" alt="" />
           </figure>
         </div>
         <div class="number2">
           <figure>
-            <img src="/Image/0 (2).png" alt="" />
+            <img src="./Image/0 (2).png" alt="" />
           </figure>
         </div>
         <div class="number3">
           <figure>
-            <img src="/Image/0 (3).png" alt="" />
+            <img src="./Image/0 (3).png" alt="" />
           </figure>
         </div>
         <div class="number4">
           <figure>
-            <img src="/Image/0 (4).png" alt="" />
+            <img src="./Image/0 (4).png" alt="" />
           </figure>
         </div>
       </div>
@@ -667,10 +669,10 @@
         <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./Categoris.html">Categories</a></li>
+            <li><a href="./AboutUs.html">About Us </a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-contact">
@@ -686,6 +688,6 @@
 
     <!-- ? End Footre Section -->
 
-    <script src="/javascript/main.js"></script>
+    <script src="./javascript/main.js"></script>
   </body>
 </html>
