--- a/Shop.html
+++ b/Shop.html
@@ -12,8 +12,8 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="/Css/shop.css" />
-    <link rel="stylesheet" href="/Css/index.css" />
+    <link rel="stylesheet" href="./Css/shop.css" />
+    <link rel="stylesheet" href="./Css/index.css" />
   </head>
   <body>
     <!-- ? Start container header-section -->
@@ -22,7 +22,7 @@
         <ul>
           <li>
             <h2 class="main-logo">
-              <a href="index.html">Shop Hu<samp>B</samp></a>
+              <a href="./index.html">Shop Hu<samp>B</samp></a>
             </h2>
           </li>
         </ul>
@@ -56,7 +56,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/1.png" alt="" />
+                <img src="./Image/1.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -99,7 +99,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/2.png" alt="" />
+                <img src="./Image/2.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -142,7 +142,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/3.png" alt="" />
+                <img src="./Image/3.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -184,7 +184,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/4.png" alt="" />
+                <img src="./Image/4.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -227,7 +227,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/6.png" alt="" />
+                <img src="./Image/6.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -269,7 +269,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/7.png" alt="" />
+                <img src="./Image/7.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -311,7 +311,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/8.png" alt="" />
+                <img src="./Image/8.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -353,7 +353,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/10.png" alt="" />
+                <img src="./Image/10.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -396,7 +396,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img src="/Image/9.png" alt="" />
+                <img src="./Image/9.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -464,10 +464,10 @@
         <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./Categoris.html">Categories</a></li>
+            <li><a href="./AboutUs.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-contact">
