--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="Shop-by-Categories-titel-grid">
         <div class="Electronic">
           <figure>
-            <img src="/Image/Electronics.png" alt="Electronics" />
+            <img src="./Image/Electronics.png" alt="Electronics" />
           </figure>
           <div class="content-conteiner">
             <h3>Electronics</h3>
@@ -143,7 +143,7 @@
         </div>
         <div class="Fashion">
           <figure>
-            <img src="./Image/hero.jpg" alt="Fashion" />
+            <img src="./Image/Fashion.png" alt="Fashion" />
           </figure>
           <div class="content-conteiner">
             <h3>Fashion</h3>
@@ -688,6 +688,6 @@
 
     <!-- ? End Footre Section -->
 
-    <script src="./javascript/main.js"></script>
+    <script src="./javascript/"></script>
   </body>
 </html>
