create blog page

--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
             <a href="./Categoris.html">Categoris</a>
           </li>
           <li class="nav-var-section">
-            <a href="./Customers.html">Our Customers</a>
+            <a href="./Customers.html" >Our Customers</a>
           </li>
           <li class="nav-var-section"><a href="./AboutUs.html">About Us</a></li>
+          <li class="nav-var-section"><a href="./blog.html">Blog</a></li>
           <li class="nav-var-section">
             <a href="./contact.html">Contuct Us</a>
           </li>
