--- a/blog.html
+++ b/blog.html
@@ -176,5 +176,36 @@
         </aside>
       </div>
     </section>
+    <!-- ? Start Footre Section -->
+    <footer class="site-footer">
+      <div class="footer-container">
+        <div class="footer-about">
+          <h3>About Us</h3>
+          <p>
+            We provide high-quality resources and learning materials for web
+            developers.
+          </p>
+        </div>
+        <div class="footer-links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./Categoris.html">Categories</a></li>
+            <li><a href="./AboutUs.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-contact">
+          <h3>Contact</h3>
+          <p>Email: mdrashed462478@gmail.com</p>
+          <p>Phone: 01992284845</p>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Rashedul Islam. All rights reserved.</p>
+      </div>
+    </footer>
+
+    <!-- ? End Footre Section -->
   </body>
 </html>
