add a  bolg image

--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,11 @@
         <main class="blog-posts">
           <!-- Blog Post 1 -->
           <article class="blog-card">
-            <img src="blog-image1.jpg" alt="Blog Post" class="blog-image" />
+            <img
+              src="https://images.unsplash.com/photo-1593720213428-28a5b9e94613?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8d2ViJTIwZGV2ZWxvcG1lbnR8ZW58MHx8MHx8fDA%3D"
+              alt="Blog Post"
+              class="blog-image"
+            />
             <div class="blog-content">
               <div class="blog-meta">
                 <span
@@ -77,7 +81,11 @@
 
           <!-- Blog Post 2 -->
           <article class="blog-card">
-            <img src="blog-image2.jpg" alt="Blog Post" class="blog-image" />
+            <img
+              src="https://images.unsplash.com/photo-1565106430482-8f6e74349ca1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHdlYiUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww"
+              alt="Blog Post"
+              class="blog-image"
+            />
             <div class="blog-content">
               <div class="blog-meta">
                 <span
@@ -139,7 +147,7 @@
             <h3 class="sidebar-title">Recent Posts</h3>
             <div class="recent-post">
               <img
-                src="recent-post1.jpg"
+                src="https://plus.unsplash.com/premium_photo-1678566154673-a728037f3f00?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2ViJTIwZGV2ZWxvcG1lbnR8ZW58MHx8MHx8fDA%3D"
                 alt="Recent Post"
                 class="recent-post-image"
               />
@@ -150,7 +158,7 @@
             </div>
             <div class="recent-post">
               <img
-                src="recent-post2.jpg"
+                src="https://images.unsplash.com/photo-1545670723-196ed0954986?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fHdlYiUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww"
                 alt="Recent Post"
                 class="recent-post-image"
               />
